--- a/index.html
+++ b/index.html
@@ -1,1 +1,58 @@
+<!DOCTYPE html>
+<html lang="pt-br">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Antonio Augusto Alves - Professor de Informática e Robótica</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <header>
+        <h1>Antonio Augusto Alves</h1>
+        <p>Professor de Informática e Robótica Educacional</p>
+    </header>
 
+    <main>
+        <section class="sobre">
+            <h2>Sobre Mim</h2>
+            <p>
+                Sou Antonio Augusto Alves, um apaixonado por tecnologia e educação com mais de 
+                <strong>20 anos de experiência</strong> como professor de informática e robótica educacional. 
+                Tenho mestrado em Computação Aplicada pela Universidade do Vale do Rio do Sinos (UNISINOS), 
+                onde desenvolvi minha expertise em soluções tecnológicas para o ensino.
+            </p>
+            <p>
+                Meu objetivo é inspirar alunos a explorar o mundo da programação, robótica e inovação, 
+                preparando-os para os desafios do futuro.
+            </p>
+        </section>
+
+        <section class="formacao">
+            <h2>Formação</h2>
+            <ul>
+                <li>Mestrado em Computação Aplicada - UNISINOS</li>
+                <li>Graduação em Informática (ou especifique, se souber)</li>
+            </ul>
+        </section>
+
+        <section class="experiencia">
+            <h2>Experiência</h2>
+            <ul>
+                <li>20 anos ensinando informática e robótica educacional</li>
+                <li>Projetos de robótica em escolas e competições</li>
+                <li>Desenvolvimento de materiais didáticos tecnológicos</li>
+            </ul>
+        </section>
+
+        <section class="contato">
+            <h2>Contato</h2>
+            <p>Email: antonio.alves@example.com (substitua pelo real)</p>
+            <p>LinkedIn: <a href="https://linkedin.com/in/antonioaugustoalves" target="_blank">linkedin.com/in/antonioaugustoalves</a></p>
+        </section>
+    </main>
+
+    <footer>
+        <p>&copy; 2025 Antonio Augusto Alves. Hospedado no GitHub Pages.</p>
+    </footer>
+</body>
+</html>
