--- a/index.html
+++ b/index.html
@@ -4,55 +4,109 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Antonio Augusto Alves - Professor de Informática e Robótica</title>
-    <link rel="stylesheet" href="style.css">
+    <!-- Bootstrap CSS via CDN -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <!-- Estilos personalizados -->
+    <style>
+        body {
+            background-color: #f8f9fa;
+            color: #333;
+        }
+        header {
+            background-color: #007bff;
+            color: white;
+            padding: 2rem 0;
+        }
+        .profile-img {
+            max-width: 200px;
+            border-radius: 50%;
+            border: 3px solid #007bff;
+        }
+        .section-title {
+            color: #007bff;
+            border-bottom: 2px solid #007bff;
+            padding-bottom: 0.5rem;
+        }
+        footer {
+            background-color: #e9ecef;
+            padding: 1rem 0;
+            margin-top: 2rem;
+        }
+        a {
+            color: #007bff;
+            text-decoration: none;
+        }
+        a:hover {
+            text-decoration: underline;
+        }
+    </style>
 </head>
 <body>
-    <header>
-        <h1>Antonio Augusto Alves</h1>
-        <p>Professor de Informática e Robótica Educacional</p>
+    <!-- Cabeçalho -->
+    <header class="text-center">
+        <div class="container">
+            <h1 class="display-4">Antonio Augusto Alves</h1>
+            <p class="lead">Professor de Informática e Robótica Educacional</p>
+        </div>
     </header>
 
-    <main>
-        <section class="sobre">
-            <h2>Sobre Mim</h2>
-            <p>
-                Sou Antonio Augusto Alves, um apaixonado por tecnologia e educação com mais de 
-                <strong>20 anos de experiência</strong> como professor de informática e robótica educacional. 
-                Tenho mestrado em Computação Aplicada pela Universidade do Vale do Rio do Sinos (UNISINOS), 
-                onde desenvolvi minha expertise em soluções tecnológicas para o ensino.
-            </p>
-            <p>
-                Meu objetivo é inspirar alunos a explorar o mundo da programação, robótica e inovação, 
-                preparando-os para os desafios do futuro.
-            </p>
+    <!-- Conteúdo principal -->
+    <main class="container my-5">
+        <!-- Sobre Mim -->
+        <section class="sobre mb-5">
+            <h2 class="section-title mb-3">Sobre Mim</h2>
+            <div class="row align-items-center">
+                <div class="col-md-4 text-center">
+                    <img src="img/perfil.jpg" alt="Foto de Antonio Augusto" class="profile-img mb-3">
+                </div>
+                <div class="col-md-8">
+                    <p>
+                        Sou Antonio Augusto Alves, um apaixonado por tecnologia e educação com mais de 
+                        <strong>20 anos de experiência</strong> como professor de informática e robótica educacional. 
+                        Tenho mestrado em Computação Aplicada pela Universidade do Vale do Rio do Sinos (UNISINOS), 
+                        onde desenvolvi minha expertise em soluções tecnológicas para o ensino.
+                    </p>
+                    <p>
+                        Meu objetivo é inspirar alunos a explorar o mundo da programação, robótica e inovação, 
+                        preparando-os para os desafios do futuro.
+                    </p>
+                </div>
+            </div>
         </section>
 
-        <section class="formacao">
-            <h2>Formação</h2>
-            <ul>
-                <li>Mestrado em Computação Aplicada - UNISINOS</li>
-                <li>Graduação em Informática (ou especifique, se souber)</li>
+        <!-- Formação -->
+        <section class="formacao mb-5">
+            <h2 class="section-title mb-3">Formação</h2>
+            <ul class="list-group">
+                <li class="list-group-item">Mestrado em Computação Aplicada - UNISINOS</li>
+                <li class="list-group-item">Tecnologia em Web Design e Programação - UNISUL</li>
             </ul>
         </section>
 
-        <section class="experiencia">
-            <h2>Experiência</h2>
-            <ul>
-                <li>20 anos ensinando informática e robótica educacional</li>
-                <li>Projetos de robótica em escolas e competições</li>
-                <li>Desenvolvimento de materiais didáticos tecnológicos</li>
+        <!-- Experiência -->
+        <section class="experiencia mb-5">
+            <h2 class="section-title mb-3">Experiência</h2>
+            <ul class="list-group">
+                <li class="list-group-item">20 anos ensinando informática e robótica educacional</li>
+                <li class="list-group-item">Projetos de robótica em escolas e competições</li>
+                <li class="list-group-item">Desenvolvimento de materiais didáticos tecnológicos</li>
             </ul>
         </section>
 
-        <section class="contato">
-            <h2>Contato</h2>
+        <!-- Contato -->
+        <section class="contato mb-5">
+            <h2 class="section-title mb-3">Contato</h2>
             <p>Email: antonio.alves@example.com (substitua pelo real)</p>
             <p>LinkedIn: <a href="https://linkedin.com/in/antonioaugustoalves" target="_blank">linkedin.com/in/antonioaugustoalves</a></p>
         </section>
     </main>
 
-    <footer>
-        <p>&copy; 2025 Antonio Augusto Alves. Hospedado no GitHub Pages.</p>
+    <!-- Rodapé -->
+    <footer class="text-center">
+        <p>© 2025 Antonio Augusto Alves. Hospedado no GitHub Pages.</p>
     </footer>
+
+    <!-- Bootstrap JS (opcional, para interatividade como modais) -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
