Adição da foto de perfil

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             <h2 class="section-title mb-3">Sobre Mim</h2>
             <div class="row align-items-center">
                 <div class="col-md-4 text-center">
-                    <img src="img/perfil.jpg" alt="Foto de Antonio Augusto" class="profile-img mb-3">
+                    <img src="perfil.png" alt="Foto de Antonio Augusto" class="profile-img mb-3">
                 </div>
                 <div class="col-md-8">
                     <p>
