--- a/index.html
+++ b/index.html
@@ -80,6 +80,7 @@
             <ul class="list-group">
                 <li class="list-group-item">Mestrado em Computação Aplicada - UNISINOS</li>
                 <li class="list-group-item">Tecnologia em Web Design e Programação - UNISUL</li>
+                <li class="list-group-item">Especialização em Aprendizagem Ativa - UNIVATES</li>
             </ul>
         </section>
 
@@ -96,8 +97,8 @@
         <!-- Contato -->
         <section class="contato mb-5">
             <h2 class="section-title mb-3">Contato</h2>
-            <p>Email: antonio.alves@example.com (substitua pelo real)</p>
-            <p>LinkedIn: <a href="https://linkedin.com/in/antonioaugustoalves" target="_blank">linkedin.com/in/antonioaugustoalves</a></p>
+            <p>Email: antonio.alves@duque.g12.br</p>
+            <p>LinkedIn: <a href="https://www.linkedin.com/in/antonio-augusto-alves-5b4310a7/" target="_blank">linkedin.com/in/antonioaugustoalves</a></p>
         </section>
     </main>
 
